--- a/views/register.html
+++ b/views/register.html
@@ -26,7 +26,7 @@
         </ul>
     </div>
     
-    <form action="" method="post">
+    <form action="/" method="post">
 
         <input type="text" placeholder="Nombre" id="name" name="name"><br>
         <input type="text" placeholder="Nombre de usuario" id="username" name="username"><br>
