--- a/views/login.html
+++ b/views/login.html
@@ -9,43 +9,56 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
 </head>
 <body>
-    <div class="header">
-        <img src="images/logo-mercado-liebre.svg" alt="logo-mercado-liebre">
-        <p>Lugar para poner barra de busqueda</p>
+    <header>
+        <img src="images/logo-mercado-liebre.svg" alt="logo-mercado-liebre" class="logo-ML">
+        <input type="text" placeholder="Buscar productos, marcas" class="searcher">
+        <button><i class="fas fa-search"></i></button>
         <p><i class="fas fa-hand-holding-usd"></i> Comprá en cuotas y sin tarjeta de crédito</p>
-        <ul>
-            <li><a href="">Ofertas</a></li>
-            <li><a href="">Tiendas Oficiales</a></li>
-            <li><a href="">Vender</a></li>
-            <li><a href="">Ayuda</a></li>
-        </ul>
-        <ul>
-            <li><a href="/register">Crea tu cuenta </a><i class="fas fa-address-card"></i></li>
-            <li><a href="/login">Ingresá </a><i class="fas fa-sign-in-alt"></i></li>
-            <li><a href="">Mis compras </a><i class="fas fa-shopping-basket"></i></li>
-        </ul>
-    </div>
+        <nav>
+            <ul>
+                <li><a href="">Ofertas</a></li>
+                <li><a href="">Tiendas Oficiales</a></li>
+                <li><a href="">Vender</a></li>
+                <li><a href="">Ayuda</a></li>
+            </ul>
+            <ul>
+                <li><a href="/register">Crea tu cuenta </a><i class="fas fa-address-card"></i></li>
+                <li><a href="/login">Ingresá </a><i class="fas fa-sign-in-alt"></i></li>
+                <li><a href="">Mis compras </a><i class="fas fa-shopping-basket"></i></li>
+            </ul>
+        </nav>
+        <div class="bar-nav">
+            <i class="fas fa-bars"></i>
+        </div>
+    </header>
+    <main>
+        <form action="/" method="post">
+            <input type="text" placeholder="Nombre de usuario" id="username" name="username"><br>
+            <input type="password" placeholder="Ingresá tu contraseña" name="pass">
     
-    <form action="/" method="post">
-        <input type="text" placeholder="Nombre de usuario" id="username" name="username"><br>
-        <input type="password" placeholder="Ingresá tu contraseña" name="pass">
+    
+            <button type="submit">Enviar</button>
+    
+        </form>
+    </main>
 
-
-        <button type="submit">Enviar</button>
-
-    </form>
-
-    <div class="footer">
-        <p><i class="fas fa-credit-card footer-icon"></i></p>
-        <b>Pagá con tarjeta o en efectivo</b>
-        <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en puntos de pago. ¡Y siempre es seguro!</p>
-        <p><i class="fas fa-gift footer-icon"></i></p>
-        <b>Envío gratis desde $ 1.999</b>
-        <p>Solo por estar registrado en Mercado Liebre tenés envíos gratis en miles de productos. Es un beneficio de Mercado Puntos.</p>
-        <p><i class="fas fa-user-shield footer-icon"></i></p>
-        <b>Seguridad, de principio a fin</b>
-        <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer, porque estás siempre protegido.</p>
-        <p>Copyright © 1999-2019 MercadoLiebre S.R.L.</p>
-    </div>
+    <footer>
+        <article>
+            <p><i class="fas fa-credit-card footer-icon"></i></p>
+            <b>Pagá con tarjeta o en efectivo</b>
+            <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en puntos de pago. ¡Y siempre es seguro!</p>
+        </article>
+        <article>
+            <p><i class="fas fa-gift footer-icon"></i></p>
+            <b>Envío gratis desde $ 1.999</b>
+            <p>Solo por estar registrado en Mercado Liebre tenés envíos gratis en miles de productos. Es un beneficio de Mercado Puntos.</p>
+        </article>
+        <article>
+            <p><i class="fas fa-user-shield footer-icon"></i></p>
+            <b>Seguridad, de principio a fin</b>
+            <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer, porque estás siempre protegido.</p>
+        </article>
+        <div>Copyright © 1999-2019 MercadoLiebre S.R.L.</div>
+    </footer>
 </body>
 </html>
