--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MercadoLiebre</title>
+    <title>Mercado Liebre</title>
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
@@ -27,79 +27,79 @@
                 <li><a href="">Mis compras </a><i class="fas fa-shopping-basket"></i></li>
             </ul>
         </nav>
-        <div class="bar-nav">
-            <i class="fas fa-bars"></i>
+        <div class="bar-nav-container">
+            <i class="fas fa-bars bar-nav"></i>
         </div>
     </header>
     
     <section>
-        <img src="images/img-home-banner.jpg" width="100%" alt="banner-mercado-liebre">
+        <img src="images/img-home-banner.jpg" alt="banner-mercado-liebre" class="banner-ML">
     </section>
 
     <main>
         <section>
-            <h3 class="recomendation">Basado en tu última visita</h3>
+            <div class="section-tittle">Basado en tu última visita</div>
             
             <article class="product">
                 <img src="images/img-cafetera-moulinex.jpg" width="100%" alt="cafetera-mercado-liebre">
                 <i class="fas fa-truck"></i>
                 <p>$6.770</p>
                 <p class="discount">40% off</p>
-                <b>Cafetera Moulinex Dolce Gusto Lorem ipsum, dolor sit amet.</b>
+                <b>Cafetera Moulinex Dolce Gusto.</b>
             </article>
             <article class="product">
                 <img src="images/img-macbook-pro-2019.jpg" width="100%" alt="macbook-mercado-liebre">
                 <i class="fas fa-truck"></i>
                 <p>$230.000</p>
                 <p class="discount">20% off</p>
-                <b>Macbook Pro 2019 Lorem ipsum, dolor sit amet.</b>
+                <b>Macbook Pro 2019.</b>
             </article>
             <article class="product">
                 <img src="images/img-tv-samsung-smart.jpg" width="100%" alt="tv-mercado-liebre">
                 <i class="fas fa-truck"></i>
                 <p>$70.500</p>
                 <p class="discount">10% off</p>
-                <b>Televisor Samsung Smart TV Lorem ipsum, dolor sit amet.</b>
+                <b>Televisor Samsung Smart TV.</b>
             </article>
             <article class="product">
                 <img src="images/img-samsung-galaxy-s10.jpg" width="100%" alt="samsumg-cel-mercado-liebre">
                 <i class="fas fa-truck"></i>
                 <p>$89.410</p>
                 <p class="discount">20% off</p>
-                <b>Samsung Galaxy s10 Lorem ipsum, dolor sit amet.</b>
+                <b>Samsung Galaxy s10.</b>
             </article>
         </section>
 
         <section>
-            <h3 class="recomendation">Ofertas</h3>
+            <div class="section-tittle">Ofertas</div>
 
             <article class="product">
                 <img src="images/img-cafetera-moulinex.jpg" width="100%" alt="cafetera-mercado-liebre">
                 <i class="fas fa-truck"></i>
                 <p>$6.770</p>
                 <p class="discount">40% off</p>
-                <b>Cafetera Moulinex Dolce Gusto Lorem ipsum, dolor sit amet.</b>
+                <b>Cafetera Moulinex Dolce Gusto.</b>
             </article>
             <article class="product">
                 <img src="images/img-macbook-pro-2019.jpg" width="100%" alt="macbook-mercado-liebre">
                 <i class="fas fa-truck"></i>
                 <p>$230.000</p>
                 <p class="discount">20% off</p>
-                <b>Macbook Pro 2019 Lorem ipsum, dolor sit amet.</b>
+                <b>Macbook Pro 2019.</b>
             </article>
             <article class="product">
                 <img src="images/img-tv-samsung-smart.jpg" width="100%" alt="tv-mercado-liebre">
                 <i class="fas fa-truck"></i>
                 <p>$70.500</p>
                 <p class="discount">10% off</p>
-                <b>Televisor Samsung Smart TV Lorem ipsum, dolor sit amet.</b>
+                <b>Televisor Samsung Smart TV.</b>
             </article>
             <article class="product">
                 <img src="images/img-samsung-galaxy-s10.jpg" width="100%" alt="samsumg-cel-mercado-liebre">
                 <i class="fas fa-truck"></i>
                 <p>$89.410</p>
                 <p class="discount">20% off</p>
-                <b>Samsung Galaxy s10 Lorem ipsum, dolor sit amet.</b>
+                <b>Samsung Galaxy s10.</b>
             </article>
             
         </section>
