--- a/views/login.html
+++ b/views/login.html
@@ -27,8 +27,8 @@
                 <li><a href="">Mis compras </a><i class="fas fa-shopping-basket"></i></li>
             </ul>
         </nav>
-        <div class="bar-nav">
-            <i class="fas fa-bars"></i>
+        <div class="bar-nav-container">
+            <i class="fas fa-bars bar-nav"></i>
         </div>
     </header>
     <main>
@@ -37,7 +37,7 @@
             <input type="password" placeholder="Ingresá tu contraseña" name="pass">
     
     
-            <button type="submit">Enviar</button>
+            <button type="submit" class="submit-btn">Enviar</button>
     
         </form>
     </main>
