--- a/views/register.html
+++ b/views/register.html
@@ -27,15 +27,15 @@
                 <li><a href="">Mis compras </a><i class="fas fa-shopping-basket"></i></li>
             </ul>
         </nav>
-        <div class="bar-nav">
-            <i class="fas fa-bars"></i>
+        <div class="bar-nav-container">
+            <i class="fas fa-bars bar-nav"></i>
         </div>
     </header>
     
     <main>
         <form action="/" method="post">
     
-            <input type="text" placeholder="Nombre" id="name" name="name"><br>
+            <input type="text" placeholder="Nombre y apellido" id="name" name="name"><br>
             <input type="text" placeholder="Nombre de usuario" id="username" name="username"><br>
             <input type="email" placeholder="E-mail" id="email" name="email"><br>
     
@@ -75,8 +75,8 @@
                 <input type="password" placeholder="Confirmá tu contraseña" name="passConfirm">
             </p>
     
-            <button type="submit">Enviar</button>
-            <button type="reset">Borrar</button>
+            <button type="submit" class="submit-btn">Enviar</button>
+            <button type="reset" class="reset-btn">Borrar</button>
     
         </form>
     </main>
