--- a/views/index.html
+++ b/views/index.html
@@ -10,9 +10,19 @@
 </head>
 <body>
     <header>
-        <img src="images/logo-mercado-liebre.svg" alt="logo-mercado-liebre" class="logo-ML">
-        <input type="text" placeholder="Buscar productos, marcas" class="searcher">
-        <button><i class="fas fa-search"></i></button>
+
+        <div class="section-ML-searcher">
+
+            <img src="images/logo-mercado-liebre.svg" alt="logo-mercado-liebre" class="logo-ML">
+            
+            <div>
+                <input type="text" placeholder="Buscar productos, marcas" class="searcher">
+                <button><i class="fas fa-search"></i></button>
+            </div>
+
+        </div>
+
+        
         <p><i class="fas fa-hand-holding-usd"></i> Comprá en cuotas y sin tarjeta de crédito</p>
         <nav>
             <ul>
@@ -37,70 +47,118 @@
     </section>
 
     <main>
-        <section>
+        <section class="last-view-based">
             <div class="section-tittle">Basado en tu última visita</div>
             
             <article class="product">
+                
                 <img src="images/img-cafetera-moulinex.jpg" width="100%" alt="cafetera-mercado-liebre">
-                <i class="fas fa-truck"></i>
-                <p>$6.770</p>
-                <p class="discount">40% off</p>
-                <b>Cafetera Moulinex Dolce Gusto.</b>
+                
+                <div class="info-product">
+                    <div class="circle-fa-truck"><i class="fas fa-truck"></i></div>
+                    <p class="price">$6.770</p>
+                    <p class="discount">40% off</p>
+                    <p class="product-name"> Cafetera Moulinex Dolce Gusto</p>
+                </div>
+
             </article>
+
             <article class="product">
+                
                 <img src="images/img-macbook-pro-2019.jpg" width="100%" alt="macbook-mercado-liebre">
-                <i class="fas fa-truck"></i>
-                <p>$230.000</p>
-                <p class="discount">20% off</p>
-                <b>Macbook Pro 2019.</b>
+                
+                <div class="info-product">
+                    <div class="circle-fa-truck"><i class="fas fa-truck"></i></div>
+                    <p class="price">$230.000</p>
+                    <p class="discount">20% off</p>
+                    <p class="product-name"> Macbook Pro 2019</p>
+                </div>
+
             </article>
+
             <article class="product">
+                
                 <img src="images/img-tv-samsung-smart.jpg" width="100%" alt="tv-mercado-liebre">
-                <i class="fas fa-truck"></i>
-                <p>$70.500</p>
-                <p class="discount">10% off</p>
-                <b>Televisor Samsung Smart TV.</b>
+                
+                <div class="info-product">
+                    <div class="circle-fa-truck"><i class="fas fa-truck"></i></div>
+                    <p class="price">$70.500</p>
+                    <p class="discount">10% off</p>
+                    <p class="product-name"> Televisor Samsung Smart TV</p>
+                </div>
+
             </article>
+
             <article class="product">
+                
                 <img src="images/img-samsung-galaxy-s10.jpg" width="100%" alt="samsumg-cel-mercado-liebre">
-                <i class="fas fa-truck"></i>
-                <p>$89.410</p>
-                <p class="discount">20% off</p>
-                <b>Samsung Galaxy s10.</b>
+                
+                <div class="info-product">
+                    <div class="circle-fa-truck"><i class="fas fa-truck"></i></div>
+                    <p class="price">$89.410</p>
+                    <p class="discount">20% off</p>
+                    <p class="product-name"> Samsung Galaxy s10</p>
+                </div>
+
             </article>
+
         </section>
 
-        <section>
+        <section class="offers">
             <div class="section-tittle">Ofertas</div>
 
             <article class="product">
+                
                 <img src="images/img-cafetera-moulinex.jpg" width="100%" alt="cafetera-mercado-liebre">
-                <i class="fas fa-truck"></i>
-                <p>$6.770</p>
-                <p class="discount">40% off</p>
-                <b>Cafetera Moulinex Dolce Gusto.</b>
+                
+                <div class="info-product">
+                    <div class="circle-fa-truck"><i class="fas fa-truck"></i></div>
+                    <p class="price">$6.770</p>
+                    <p class="discount">40% off</p>
+                    <p class="product-name"> Cafetera Moulinex Dolce Gusto</p>
+                </div>
+
             </article>
+
             <article class="product">
+                
                 <img src="images/img-macbook-pro-2019.jpg" width="100%" alt="macbook-mercado-liebre">
-                <i class="fas fa-truck"></i>
-                <p>$230.000</p>
-                <p class="discount">20% off</p>
-                <b>Macbook Pro 2019.</b>
+                
+                <div class="info-product">
+                    <div class="circle-fa-truck"><i class="fas fa-truck"></i></div>
+                    <p class="price">$230.000</p>
+                    <p class="discount">20% off</p>
+                    <p class="product-name"> Macbook Pro 2019</p>
+                </div>
+
             </article>
+
             <article class="product">
+                
                 <img src="images/img-tv-samsung-smart.jpg" width="100%" alt="tv-mercado-liebre">
-                <i class="fas fa-truck"></i>
-                <p>$70.500</p>
-                <p class="discount">10% off</p>
-                <b>Televisor Samsung Smart TV.</b>
+                
+                <div class="info-product">
+                    <div class="circle-fa-truck"><i class="fas fa-truck"></i></div>
+                    <p class="price">$70.500</p>
+                    <p class="discount">10% off</p>
+                    <p class="product-name"> Televisor Samsung Smart TV</p>
+                </div>
+
             </article>
+
             <article class="product">
+                
                 <img src="images/img-samsung-galaxy-s10.jpg" width="100%" alt="samsumg-cel-mercado-liebre">
-                <i class="fas fa-truck"></i>
-                <p>$89.410</p>
-                <p class="discount">20% off</p>
-                <b>Samsung Galaxy s10.</b>
+                
+                <div class="info-product">
+                    <div class="circle-fa-truck"><i class="fas fa-truck"></i></div>
+                    <p class="price">$89.410</p>
+                    <p class="discount">20% off</p>
+                    <p class="product-name"> Samsung Galaxy s10</p>
+                </div>
+
             </article>
+
             
         </section>
 
