--- a/views/login.html
+++ b/views/login.html
@@ -10,9 +10,19 @@
 </head>
 <body>
     <header>
-        <img src="images/logo-mercado-liebre.svg" alt="logo-mercado-liebre" class="logo-ML">
-        <input type="text" placeholder="Buscar productos, marcas" class="searcher">
-        <button><i class="fas fa-search"></i></button>
+
+        <div class="section-ML-searcher">
+
+            <img src="images/logo-mercado-liebre.svg" alt="logo-mercado-liebre" class="logo-ML">
+            
+            <div>
+                <input type="text" placeholder="Buscar productos, marcas" class="searcher">
+                <button><i class="fas fa-search"></i></button>
+            </div>
+
+        </div>
+
+        
         <p><i class="fas fa-hand-holding-usd"></i> Comprá en cuotas y sin tarjeta de crédito</p>
         <nav>
             <ul>
