--- a/views/register.html
+++ b/views/register.html
@@ -10,9 +10,19 @@
 </head>
 <body>
     <header>
-        <img src="images/logo-mercado-liebre.svg" alt="logo-mercado-liebre" class="logo-ML">
-        <input type="text" placeholder="Buscar productos, marcas" class="searcher">
-        <button><i class="fas fa-search"></i></button>
+
+        <div class="section-ML-searcher">
+
+            <img src="images/logo-mercado-liebre.svg" alt="logo-mercado-liebre" class="logo-ML">
+            
+            <div>
+                <input type="text" placeholder="Buscar productos, marcas" class="searcher">
+                <button><i class="fas fa-search"></i></button>
+            </div>
+
+        </div>
+
+        
         <p><i class="fas fa-hand-holding-usd"></i> Comprá en cuotas y sin tarjeta de crédito</p>
         <nav>
             <ul>
@@ -45,7 +55,7 @@
     
             <h3>Perfil del usuario</h3>
     
-            <p>
+            <p class="register-user-profile">
                 <input type="radio" name="user-profile" id="comprador" value="buyer"> 
                 <label for="comprador">Comprador</label>
                 <input type="radio" name="user-profile" id="vendedor" value="seller"> 
@@ -55,16 +65,18 @@
     
             <h3>Intereses</h3>
     
-            <input type="checkbox" name="interest" id="electro" value="electric">
-            <label for="electro">Electro</label>
-            <input type="checkbox" name="interest" id="moda" value="fashion">
-            <label for="moda">Moda</label>
-            <input type="checkbox" name="interest" id="hogar" value="home">
-            <label for="hogar">Hogar</label>
-            <input type="checkbox" name="interest" id="juguetes" value="toys">
-            <label for="juguetes">Juguetería</label>
-            <input type="checkbox" name="interest" id="vidaSana" value="healthy-life">
-            <label for="vidaSana">Vida sana</label>
+            <div class="interest">
+                <input type="checkbox" name="interest" id="electro" value="electric">
+                <label for="electro">Electro</label>
+                <input type="checkbox" name="interest" id="moda" value="fashion">
+                <label for="moda">Moda</label>
+                <input type="checkbox" name="interest" id="hogar" value="home">
+                <label for="hogar">Hogar</label>
+                <input type="checkbox" name="interest" id="juguetes" value="toys">
+                <label for="juguetes">Juguetería</label>
+                <input type="checkbox" name="interest" id="vidaSana" value="healthy-life">
+                <label for="vidaSana">Vida sana</label>
+            </div>
     
             <h3>Elegí tu foto de usuario</h3>
     
