--- a/views/index.html
+++ b/views/index.html
@@ -15,7 +15,7 @@
 
             <img src="images/logo-mercado-liebre.svg" alt="logo-mercado-liebre" class="logo-ML">
             
-            <div>
+            <div class="searcher-container">
                 <input type="text" placeholder="Buscar productos, marcas" class="searcher">
                 <button><i class="fas fa-search"></i></button>
             </div>
