--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,19 +1,50 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   background-color: #ebebeb;
   padding: 0px;
   margin: 0px;
+  font-family: "Roboto", sans-serif;
 }
 
 header {
   background-color: #eac926;
+  padding: 1rem;
+}
+
+.section-ML-searcher {
+  display: flex;
+  justify-content: space-around;
+}
+
+.logo-ML {
+  width: 45%;
+}
+
+.searcher-container {
+  width: 45%;
+  display: flex;
+  position: relative;
+}
+
+.searcher-container input {
+  width: 100%;
+  border-style: none;
+}
+
+.searcher-container button {
+  z-index: 1;
+  position: absolute;
+  right: 0px;
+  top: 0px;
+  height: 100%;
+  border-style: none;
 }
 
 main {
   padding: 0 14px; /* no me pidio */
-}
-
-a, p, form, div, b {
-  font-family: "Roboto", sans-serif;
 }
 
 .section-tittle {
@@ -26,7 +57,6 @@ a, p, form, div, b {
   color: grey;
 }
 
-
 .footer-icon {
   color: #1259c3;
 }
@@ -35,8 +65,31 @@ a, p, form, div, b {
   background-color: white;
   margin: 15px 5%;
   width: 90%;
-  padding: 0 15px; 
+  padding: 0 15px;
   box-sizing: border-box;
+}
+
+.product:hover {
+  box-shadow: 0px 0px 10px rgb(100, 100, 100);
+}
+
+.info-product {
+  border-top-color: #ebebeb;
+  border-top-style: solid;
+  border-top-width: 1px;
+  padding: 10px 0;
+  display: flex;
+  position: relative;
+  flex-wrap: wrap;
+}
+
+.product-name {
+  margin: 0;
+  color: grey;
+}
+
+.fa-truck {
+  color: #39b54a;
 }
 
 footer {
@@ -57,15 +110,6 @@ main input {
   border-style: hidden;
 }
 
-.logo-ML {
-  width: 50%;
-}
-
-
-.section-ML-searcher {
-  display: flex;
-}
-
 nav {
   display: none;
 }
@@ -84,11 +128,11 @@ nav {
 
 .bar-nav:hover {
   cursor: pointer;
-  background-color: #0022AA;
+  background-color: #0022aa;
 }
 
 .bar-nav-container {
-  text-align: center
+  text-align: center;
 }
 
 .banner-ML {
@@ -111,25 +155,6 @@ nav {
   color: #39b54a;
 }
 
-.product-name {
-  margin: 0;
-  color: grey;
-}
-
-.fa-truck {
-  color: #39b54a;
-}
-
-.info-product {
-  border-top-color: #ebebeb;
-  border-top-style: solid;
-  border-top-width: 1px;
-  padding: 10px 0;
-  display: flex;
-  position: relative;
-  flex-wrap: wrap;
-}
-
 .circle-fa-truck {
   border: 1px solid #39b54a;
   border-radius: 30px;
@@ -140,11 +165,9 @@ nav {
   top: -15px;
 }
 
-
-
 .submit-btn {
   color: white;
-  background-color: #0044AA;
+  background-color: #0044aa;
   text-align: center; /* no me pidio */
   font-size: 14px;
   padding: 10px;
@@ -156,12 +179,12 @@ nav {
 }
 
 .submit-btn:hover {
-  background-color: #0022AA;
+  background-color: #0022aa;
 }
 
 .reset-btn {
   color: white;
-  background-color: #AA0044;
+  background-color: #aa0044;
   text-align: center; /* no me pidio */
   font-size: 14px;
   padding: 10px;
@@ -173,11 +196,11 @@ nav {
 }
 
 .reset-btn:hover {
-  background-color: #CC1155;
+  background-color: #cc1155;
 }
 
 .register-user-profile {
-  display: flex; 
+  display: flex;
   align-items: flex-start;
 }
 
@@ -197,4 +220,17 @@ nav {
 .interest label {
   width: 90%;
   margin: 20px 0;
+}
+
+@media (min-width: 361px) {
+}
+
+@media (min-width: 769px) {
+  .info-product {
+    display: none;
+  }
+
+  .info-product:hover {
+    display: flex;
+  }
 }
