--- a/views/register.html
+++ b/views/register.html
@@ -15,41 +15,44 @@
 
             <img src="images/logo-mercado-liebre.svg" alt="logo-mercado-liebre" class="logo-ML">
             
-            <div>
+            <div class="searcher-container">
                 <input type="text" placeholder="Buscar productos, marcas" class="searcher">
                 <button><i class="fas fa-search"></i></button>
             </div>
 
+            <p class="phrase"><i class="fas fa-hand-holding-usd"></i> Comprá en cuotas y sin tarjeta de crédito</p>
         </div>
 
-        
-        <p><i class="fas fa-hand-holding-usd"></i> Comprá en cuotas y sin tarjeta de crédito</p>
-        <nav>
-            <ul>
-                <li><a href="">Ofertas</a></li>
-                <li><a href="">Tiendas Oficiales</a></li>
-                <li><a href="">Vender</a></li>
-                <li><a href="">Ayuda</a></li>
-            </ul>
-            <ul>
-                <li><a href="/register">Crea tu cuenta </a><i class="fas fa-address-card"></i></li>
-                <li><a href="/login">Ingresá </a><i class="fas fa-sign-in-alt"></i></li>
-                <li><a href="">Mis compras </a><i class="fas fa-shopping-basket"></i></li>
-            </ul>
-        </nav>
-        <div class="bar-nav-container">
-            <i class="fas fa-bars bar-nav"></i>
+        <div>
+            <div class="bar-nav-icon-container">
+                <i class="fas fa-bars bar-nav-icon"></i>
+            </div>
+
+            <nav class="bar-nav">
+                <ul class="site-links">
+                    <li><a href="">Ofertas</a></li>
+                    <li><a href="">Tiendas Oficiales</a></li>
+                    <li><a href="">Vender</a></li>
+                    <li><a href="">Ayuda</a></li>
+                </ul>
+                <ul class="user-settings">
+                    <li><a href="/register">Crea tu cuenta </a><i class="fas fa-address-card"></i></li>
+                    <li><a href="/login">Ingresá </a><i class="fas fa-sign-in-alt"></i></li>
+                    <li><a href="">Mis compras </a><i class="fas fa-shopping-basket"></i></li>
+                </ul>
+            </nav>
         </div>
+
     </header>
     
-    <main>
-        <form action="/" method="post">
+    <main class="regiter-main">
+        <form action="/" method="post" class="register-form">
     
             <input type="text" placeholder="Nombre y apellido" id="name" name="name"><br>
             <input type="text" placeholder="Nombre de usuario" id="username" name="username"><br>
             <input type="email" placeholder="E-mail" id="email" name="email"><br>
     
-            <label for="">Fecha de nacimiento</label><br>
+            <label for="" class="birthdate">Fecha de nacimiento</label><br>
             <input type="date" name="birthday" id="birthday"><br>
             <input type="text" placeholder="Domicilio" id="address" name="address"><br>
     
@@ -95,17 +98,17 @@
 
     <footer>
         <article>
-            <p><i class="fas fa-credit-card footer-icon"></i></p>
+            <p class="icon-footer-container"><i class="fas fa-credit-card footer-icon"></i></p>
             <b>Pagá con tarjeta o en efectivo</b>
             <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en puntos de pago. ¡Y siempre es seguro!</p>
         </article>
         <article>
-            <p><i class="fas fa-gift footer-icon"></i></p>
+            <p class="icon-footer-container"><i class="fas fa-gift footer-icon"></i></p>
             <b>Envío gratis desde $ 1.999</b>
             <p>Solo por estar registrado en Mercado Liebre tenés envíos gratis en miles de productos. Es un beneficio de Mercado Puntos.</p>
         </article>
         <article>
-            <p><i class="fas fa-user-shield footer-icon"></i></p>
+            <p class="icon-footer-container"><i class="fas fa-user-shield footer-icon"></i></p>
             <b>Seguridad, de principio a fin</b>
             <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer, porque estás siempre protegido.</p>
         </article>
