--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -17,7 +17,7 @@ header {
 .section-ML-searcher {
   display: flex;
   justify-content: space-around;
-  flex-wrap: wrap;/* 
+  flex-wrap: wrap; /* 
   max-height: 3rem; */
 }
 
@@ -119,7 +119,8 @@ footer i {
   margin: 1rem 0 0.5rem;
 }
 
-footer p, b {
+footer p,
+b {
   text-align: center;
   margin: 0;
 }
@@ -143,7 +144,7 @@ main input {
   border-style: hidden;
 }
 
-.register-form .birthdate{
+.register-form .birthdate {
   font-weight: bold;
 }
 
@@ -279,10 +280,9 @@ nav {
   .logo-ML {
     width: 15%;
     margin: 0;
-
   }
 
-  .searcher-container{
+  .searcher-container {
     width: 60%;
     margin: 0;
     height: 100%;
@@ -291,27 +291,34 @@ nav {
   .phrase {
     width: 20%;
     margin: 0;
-
   }
 
   .bar-nav-icon-container {
     display: none;
   }
 
-  .bar-nav, .site-links, .user-settings {
+  .bar-nav {
+    display: flex;
+    padding: 2rem 0 1rem;
+  }
+
+  .site-links,
+  .user-settings {
     display: flex;
   }
 
-  .site-links, .user-settings {
+  .site-links,
+  .user-settings {
     width: 50%;
     list-style-type: none;
     padding: 0;
   }
 
-  .site-links a, .user-settings a{
+  .site-links a,
+  .user-settings a {
     color: black;
     text-decoration: none;
-    font-size: 0.85rem;
+    font-size: 1rem;
   }
 
   .site-links li {
@@ -367,10 +374,19 @@ nav {
     margin-left: 2rem;
   }
 
+  .login-body {
+    min-height: 100vh;
+  }
+
   .login-main {
     width: 35%;
     padding: 0;
     margin: 0 auto;
+  }
+
+  .footer-login {
+    position: absolute;
+    bottom: 0;
   }
 
   .regiter-main {
