--- a/views/login.html
+++ b/views/login.html
@@ -8,12 +8,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
 </head>
-<body>
+<body class="login-body">
     <header>
 
         <div class="section-ML-searcher">
 
-            <img src="images/logo-mercado-liebre.svg" alt="logo-mercado-liebre" class="logo-ML">
+            <a href="/" class="logo-ML"><img src="images/logo-mercado-liebre.svg" alt="logo-mercado-liebre" ></a>
             
             <div class="searcher-container">
                 <input type="text" placeholder="Buscar productos, marcas" class="searcher">
@@ -55,7 +55,7 @@
         </form>
     </main>
 
-    <footer>
+    <footer class="footer-login">
         <article>
             <p class="icon-footer-container"><i class="fas fa-credit-card footer-icon"></i></p>
             <b>Pagá con tarjeta o en efectivo</b>
