--- a/views/register.html
+++ b/views/register.html
@@ -13,7 +13,7 @@
 
         <div class="section-ML-searcher">
 
-            <img src="images/logo-mercado-liebre.svg" alt="logo-mercado-liebre" class="logo-ML">
+            <a href="/" class="logo-ML"><img src="images/logo-mercado-liebre.svg" alt="logo-mercado-liebre" ></a>
             
             <div class="searcher-container">
                 <input type="text" placeholder="Buscar productos, marcas" class="searcher">
